add solution for game 2048 step 1 of 18